--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -1,7 +1,7 @@
 /* 
     Document   : stylesheet
     Created on : 21 févr. 2013, 13:19:55
-    Author     : thiam
+    Author     : Calbrix && Ikerchalene
     Description:
         Purpose of the stylesheet follows.
 */
@@ -11,13 +11,13 @@ body {
    font-family: Verdana, Arial, sans-serif;
    font-size: smaller;
    padding: 50px;
-   color: #555;
-   width: 1000px;
+   color: #457;
+   width: 1100px;
 }
 
 h1 {
-   letter-spacing: 6px;
-   font-size: 1.6em;
+   letter-spacing: 8px;
+   font-size: 1.8em;
    color: #be7429;
    font-weight: bold;
 }
@@ -66,7 +66,7 @@ a:hover {
 }
 
 .popupItem {
-  color: #333;
+  color: #444;
   text-decoration: none;
   font-size: 1.2em;
 }
