--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -8,113 +8,119 @@
 
 
 body {
-   font-family: Verdana, Arial, sans-serif;
-   font-size: smaller;
-   padding: 50px;
-   color: #457;
-   width: 1100px;
+    font-family: Verdana, Arial, sans-serif;
+    font-size: smaller;
+    padding: 50px;
+    color: #457;
+    width: 1100px;
 }
 
+
+
 h1 {
-   letter-spacing: 8px;
-   font-size: 1.8em;
-   color: #be7429;
-   font-weight: bold;
+    letter-spacing: 8px;
+    font-size: 1.8em;
+    color: blue;
+    font-weight: bold;
+    font-style: italic;
 }
 
 h2 {
-   text-align: left;
-   letter-spacing: 6px;
-   font-size: 1.4em;
-   color: #be7429;
-   font-weight: normal;
-   width: 450px;
+    text-align: left;
+    letter-spacing: 6px;
+    font-size: 1.4em;
+    color: #be7429;
+    font-weight: normal;
+    width: 450px;
 }
 
 table {
-   width: 550px;
-   padding: 10px;
-   background-color: #c5e7e0;
-   font-family: sans-serif;
+    width: 550px;
+    padding: 10px;
+    background-color: #c5e7e0;
+    font-family: sans-serif;
 }
 
 td {
-   padding: 10px;
+    padding: 10px;
 }
 
 a {
-  color: #be7429;
-  text-decoration: none;
+    color: #be7429;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .popupBox {
-  position: absolute;
-  top: 170px;
-  left: 140px;
+    position: absolute;
+    top: 170px;
+    left: 140px;
 }
 
 .popupCell {
-   background-color: #fffafa;
+    background-color: #fffafa;
 }
 
 .popupCell:hover {
-  background-color: #f5ebe9;
+    background-color: #f5ebe9;
+}
+
+.redText {
+    color: RED;
 }
 
 .popupItem {
-  color: #444;
-  text-decoration: none;
-  font-size: 1.2em;
+    color: #444;
+    text-decoration: none;
+    font-size: 1.2em;
 }
 
-
 form {
- background-color:#FAFAFA;
- padding:10px;
- width:280px;
- }
+    background-color:#FAFAFA;
+    padding:10px;
+    width:280px;
+}
 fieldset {
- padding:0 20px 20px 20px;
- margin-bottom:10px;
- border:1px solid #DF3F3F;
- }
+    padding:0 20px 20px 20px;
+    margin-bottom:10px;
+    border:1px solid #DF3F3F;
+}
 legend {
- color:#DF3F3F;
- font-weight:bold
- }
+    color:#DF3F3F;
+    font-weight:bold
+}
 label {
- margin-top:10px;
- display:block;
- }
+    margin-top:10px;
+    display:block;
+}
 label.inline {
- display:inline;
- margin-right:50px;
- }
+    display:inline;
+    margin-right:50px;
+}
 input, textarea, select, option {
- background-color:#FFF3F3;
- }
+    background-color:#FFF3F3;
+}
 input, textarea, select {
- padding:3px;
- border:1px solid #F5C5C5;
- border-radius:5px;
- width:200px;
- box-shadow:1px 1px 2px #C0C0C0 inset;
- }
+    padding:3px;
+    border:1px solid #F5C5C5;
+    border-radius:5px;
+    width:200px;
+    box-shadow:1px 1px 2px #C0C0C0 inset;
+}
 select {
- margin-top:10px;
- }
+    margin-top:10px;
+}
 input[type=radio] {
- background-color:transparent;
- border:none;
- width:10px;
- }
+    background-color:transparent;
+    border:none;
+    width:10px;
+}
 input[type=submit], input[type=reset] {
- width:100px;
- margin-left:5px;
- box-shadow:1px 1px 1px #D83F3D;
- cursor:pointer;
- }
+    width:100px;
+    margin-left:5px;
+    box-shadow:1px 1px 1px #D83F3D;
+    cursor:pointer;
+}
