--- a/web/css/modele05.css
+++ b/web/css/modele05.css
@@ -128,6 +128,11 @@ body {
 	line-height: 1.5;
 }
 
+div#login{
+    height:30px;
+    width: 1200px;
+    background-color: #768AC1;
+}
 
 /* --- NOTES ---
 
